<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.EditUserInfoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_tool_height">

        <Button
            android:id="@+id/button_edit_info_back"
            android:layout_width="@dimen/main_button"
            android:layout_height="@dimen/main_button"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:contentDescription="@string/back">

        </Button>

        <TextView
            android:text="@string/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
        </TextView>

        <Button
            android:id="@+id/button_edit_info_done"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/main_button"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:text="@string/confirm">
        </Button>

    </RelativeLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/confirm_text"
        android:layout_margin="@dimen/margin"
        android:text="@string/update_remark">
    </TextView>

    <EditText
        android:id="@+id/edit_info_remark"
        android:layout_width="match_parent"
        android:maxLines="1"
        android:inputType="text"
        android:layout_height="@dimen/confirm_remark"
        android:layout_marginHorizontal="@dimen/margin">
    </EditText>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_edit_info"
        android:layout_margin="@dimen/margin"
        android:text="@string/block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOff="@string/block_no"
        android:textOn="@string/block_yes"
        android:checked="false">
    </androidx.appcompat.widget.SwitchCompat>

    <Button
        android:id="@+id/button_user_info_delete"
        android:text="@string/delete_friend"
        android:layout_gravity="center_horizontal"
        android:layout_width="@dimen/user_info_button_width"
        android:layout_height="@dimen/user_info_button_height">
    </Button>

</LinearLayout>