<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ConfirmActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_tool_height">

        <Button
            android:id="@+id/button_confirm_back"
            android:contentDescription="@string/back"
            android:layout_width="@dimen/main_button"
            android:layout_height="@dimen/main_button"
            android:layout_alignParentStart="true"
            android:layout_margin="@dimen/margin"
            android:layout_centerVertical="true">
        </Button>

        <TextView
            android:text="@string/add_friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
        </TextView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/confirm_avatar"
            android:layout_width="@dimen/avatar"
            android:layout_height="@dimen/avatar"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:contentDescription="@string/avatar"
            android:src="@mipmap/ic_launcher"></ImageView>

        <LinearLayout
            android:layout_toEndOf="@+id/confirm_avatar"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/confirm_nickname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/nickname"
                android:layout_margin="@dimen/margin">
            </TextView>
            
            <TextView
                android:id="@+id/confirm_id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/id"
                android:layout_margin="@dimen/margin">
            </TextView>
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/confirm_text"
        android:layout_margin="@dimen/margin"
        android:text="@string/request">
    </TextView>

    <EditText
        android:id="@+id/confirm_request"
        android:layout_width="match_parent"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:layout_height="@dimen/confirm_request"
        android:layout_marginHorizontal="@dimen/margin">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/confirm_text"
        android:layout_margin="@dimen/margin"
        android:text="@string/remark">
    </TextView>

    <EditText
        android:id="@+id/confirm_remark"
        android:layout_width="match_parent"
        android:maxLines="1"
        android:inputType="text"
        android:layout_height="@dimen/confirm_remark"
        android:layout_marginHorizontal="@dimen/margin">
    </EditText>

    <Button
        android:id="@+id/button_confirm_send"
        android:text="@string/send"
        android:layout_margin="@dimen/margin"
        android:layout_width="@dimen/confirm_width"
        android:layout_height="@dimen/confirm_height"
        android:layout_gravity="center_horizontal">

    </Button>

</LinearLayout>