<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.AddActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_tool_height">

        <Button
            android:id="@+id/button_add_back"
            android:contentDescription="@string/back"
            android:layout_width="@dimen/main_button"
            android:layout_height="@dimen/main_button"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true">
        </Button>

        <TextView
            android:text="@string/add_friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
        </TextView>

    </RelativeLayout>
    
    <EditText
        android:id="@+id/edit_text_search_add"
        android:hint="@string/add_hint"
        android:layout_width="match_parent"
        android:layout_height="@dimen/add_text_height"
        android:layout_marginHorizontal="@dimen/add_text_margin_h"
        android:layout_marginVertical="@dimen/add_text_margin_v"
        android:maxLines="1"
        android:inputType="text">
    </EditText>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_results"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>