<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/add_avatar"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/avatar"
        android:layout_width="@dimen/add_avatar"
        android:layout_height="@dimen/add_avatar"
        android:src="@mipmap/ic_launcher"
        android:layout_margin="@dimen/add_margin">
    </ImageView>

    <LinearLayout
        android:layout_toEndOf="@id/add_avatar"
        android:layout_toStartOf="@id/button_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/add_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/add_nickname"
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/add_nickname"
            android:maxLines="1">
        </TextView>

        <TextView
            android:id="@+id/add_id"
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/add_id"
            android:maxLines="1">
        </TextView>
    </LinearLayout>

    <Button
        android:id="@+id/button_add"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/add_friends"
        android:layout_width="@dimen/add_button_width"
        android:layout_height="@dimen/add_button_height"
        android:layout_margin="@dimen/add_margin">

    </Button>

</RelativeLayout>