<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/new_friends_avatar"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/avatar"
        android:layout_width="@dimen/add_avatar"
        android:layout_height="@dimen/add_avatar"
        android:src="@mipmap/ic_launcher"
        android:layout_margin="@dimen/margin">
    </ImageView>

    <LinearLayout
        android:layout_toEndOf="@id/new_friends_avatar"
        android:layout_toStartOf="@id/button_new_friends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/new_friends_nickname"
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/add_nickname"
            android:maxLines="1">
        </TextView>

        <TextView
            android:id="@+id/new_friends_request"
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/new_friends_request"
            android:maxLines="1">
        </TextView>
    </LinearLayout>

    <Button
        android:id="@+id/button_new_friends"
        android:layout_width="@dimen/new_friends_button_width"

        android:layout_height="@dimen/new_friends_button_height"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/margin"
        android:contentDescription="@string/agree"
        android:text="@string/agree">

    </Button>
</RelativeLayout>