<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.PersonalFragment">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/personal_avatar"
            android:layout_width="@dimen/personal_avatar"
            android:layout_height="@dimen/personal_avatar"
            android:src="@mipmap/ic_launcher"
            android:layout_margin="@dimen/margin">
        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/personal_nickname"
                android:text="@string/name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/personal_nickname"
                android:layout_margin="@dimen/margin">
            </TextView>

            <TextView
                android:id="@+id/personal_id"
                android:text="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/personal_id"
                android:layout_margin="@dimen/margin">
            </TextView>

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/button_personal_exit"
            android:text="@string/exit"
            android:layout_width="@dimen/personal_exit_width"
            android:layout_height="@dimen/personal_exit_height"
            android:layout_gravity="center_horizontal">

        </Button>

    </ScrollView>

</LinearLayout>