<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <FrameLayout
            android:id="@+id/frame_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_tool_height">

            <ImageButton
                android:id="@+id/button_news"
                android:contentDescription="@string/chat"
                android:layout_width="@dimen/main_button"
                android:layout_height="@dimen/main_button"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="50dp"
                android:src="@mipmap/ic_launcher">
            </ImageButton>

            <ImageButton
                android:id="@+id/button_contacts"
                android:contentDescription="@string/contacts"
                android:layout_width="@dimen/main_button"
                android:layout_height="@dimen/main_button"
                android:layout_centerInParent="true"
                android:src="@mipmap/ic_launcher">
            </ImageButton>

            <ImageButton
                android:id="@+id/button_personal"
                android:contentDescription="@string/app_name"
                android:layout_width="@dimen/main_button"
                android:layout_height="@dimen/main_button"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/main_button_margin"
                android:src="@mipmap/ic_launcher">
            </ImageButton>

        </RelativeLayout>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/main_nav"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/header_main_navigation"
        app:menu="@menu/menu_main_navigation">

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>