<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.UserInfoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_tool_height">

        <Button
            android:id="@+id/button_user_info_back"
            android:layout_width="@dimen/main_button"
            android:layout_height="@dimen/main_button"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:contentDescription="@string/back">

        </Button>


        <Button
            android:id="@+id/button_user_info_more"
            android:layout_width="@dimen/main_button"
            android:layout_height="@dimen/main_button"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:contentDescription="@string/add_friends">

        </Button>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/userInfo_avatar"
            android:layout_width="@dimen/avatar"
            android:layout_height="@dimen/avatar"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:contentDescription="@string/avatar"
            android:src="@mipmap/ic_launcher">
            
        </ImageView>

        <LinearLayout
            android:layout_toEndOf="@id/userInfo_avatar"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/userInfo_remark"
                android:layout_width="match_parent"
                android:layout_height="@dimen/nickname"
                android:layout_margin="@dimen/margin">
            </TextView>

            <TextView
                android:id="@+id/userInfo_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin">
            </TextView>

            <TextView
                android:id="@+id/userInfo_id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/id"
                android:layout_margin="@dimen/margin">
            </TextView>
        </LinearLayout>
    </RelativeLayout>
    
    <Button
        android:id="@+id/button_user_info_chat"
        android:layout_gravity="center_horizontal"
        android:layout_width="@dimen/user_info_button_width"
        android:layout_height="@dimen/user_info_button_height">
    </Button>

</LinearLayout>